syntax = "proto3";
package com.study.proto;

option java_package = "com.study.platform.auth.grpc";

service AuthService {
  rpc RegisterUser (UserRequest) returns (UserResponse);
}

message UserRequest {
  string user_name = 1;
  string group_name = 2;
}

message UserResponse {
  string user_id = 1;
}