syntax = "proto3";
package com.study.proto;

option java_package = "com.study.platform.user.grpc";

import "google/protobuf/wrappers.proto";


service UserService {
  rpc UpdateLoginInformationUser (UpdateUserInformationRequest) returns (google.protobuf.BoolValue);
  rpc DeleteInformationUser(BaseUserInformationRequest) returns (google.protobuf.BoolValue);
  rpc GetInformationUser(BaseUserInformationRequest) returns (GetUserInformationResponse);
  rpc ExistUserById(BaseUserInformationRequest) returns (google.protobuf.BoolValue);
  rpc GetUserIdByToken(BaseUserInformationRequest) returns (BaseUserInformationResponse);
}

message BaseUserInformationRequest {
  string user_id = 1;
}

message BaseUserInformationResponse {
  string user_id = 1;
}

message UpdateUserInformationRequest {
  string user_id = 1;
  string email = 2;
  string password = 3;
  string role = 4;
}

message GetUserInformationResponse {
  string email = 1;
  string password = 2;
  string role = 3;
}

